# fear-and-greed

./: .gitignore  LICENSE  Makefile  README.md  cnn.py  cnn_test.py  main.py  requirements.txt  samconfig.toml  setup.cfg  template.yaml  tox.ini
.github/workflows/: deploy.yml  pypi.yml  test.yml
fear_and_greed/: Dockerfile  app.py  requirements.txt  test_handler.py
src/fear_and_greed/: __init__.py  cnn.py
tests/: response-golden.json  test_cnn.py
