[metadata]
name = fear-and-greed
version = 0.1
author = Víctor Terrón
author_email = quintanar@gmail.com
description = Python wrapper for CNN Fear & Greed Index.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vterron/fear-and-greed
project_urls =
    Bug Tracker = https://github.com/vterron/fear-and-greed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Financial and Insurance Industry

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    requests
    requests-cache

[options.packages.find]
where = src
